<resources>
    <string name="app_name">Cheats Gta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cheats Gta</string>
    <string name="nav_header_subtitle">Welcome Home Player</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Gta SanAndreas</string>
    <string name="menu_gallery">Gta Liberty City</string>
    <string name="menu_slideshow">Gta III</string>
    <string name="menu_gta_v">Gta V</string>
    <string name="menu_gta_iv">Gta IV</string>
    <string name="menu_gta2">Gta 2</string>
    <string name="menu_gta1">Gta 1</string>



</resources>