<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_gta_sa"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_gta_viciii"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_gta_iii"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_gta_v"
            android:icon="@drawable/icon_gta_v"
            android:title="@string/menu_gta_v" />


    </group>

</menu>