<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.willaimsilva.cheatsgta.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.com.willaimsilva.cheatsgta.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.willaimsilva.cheatsgta.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_gta_v"
        android:name="br.com.willaimsilva.cheatsgta.GTAVFragment"
        android:label="@string/menu_gta_v"
        tools:layout="@layout/fragment_gtav" />
    <fragment
        android:id="@+id/nav_gtaiv"
        android:name="br.com.willaimsilva.cheatsgta.fragment_gtaiv"
        android:label="@string/menu_gta_iv"
        tools:layout="@layout/fragment_gtaiv" />
    <fragment
        android:id="@+id/nav_gta2"
        android:name="br.com.willaimsilva.cheatsgta.fragment_gta2"
        android:label="Gta2"
        tools:layout="@layout/fragment_gta2" />
    <fragment
        android:id="@+id/nav_gta1"
        android:name="br.com.willaimsilva.cheatsgta.fragment_gta1"
        android:label="GTA"
        tools:layout="@layout/fragment_gta1" />
</navigation>